src/test/ui/consts/const-eval/issue-52442.stderr
error[E0658]: casting pointers to integers in constants is unstable
  --> $DIR/issue-52442.rs:2:13
   |
LL |     [();  { &loop { break } as *const _ as usize } ];
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51910 <https://github.com/rust-lang/rust/issues/51910> for more information
   = help: add `#![feature(const_raw_ptr_to_usize_cast)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
